extends Node2D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


func _on_bn_start_pressed() -> void:
	pass # Replace with function body.


func _on_bn_setting_pressed() -> void:
	pass # Replace with function body.


func _on_bn_exit_pressed() -> void:
	get_tree().quit()
